feat(saga): contract v2 core — deterministic terminal fault (4.1), pinned retries (5), outcome-split metrics (8)
- 5 targets: probabilistic payment failure replaced by normative FNV-1a-64
  per-orderId decline (offset 0xcbf29ce484222325, prime 0x100000001b3,
  Long.remainderUnsigned(h,1000) < 30 = exactly 3.0%), routed to saga
  compensation with zero retries; explicit transient retry config where the
  stack can express it; EXERIS_SAGA_FAULT_MODE=terminal|off, legacy rate
  knobs WARN+ignored; per-target unit tests lock canonical FNV vectors
- k6.js: seeded deterministic orderIds (K6_ORDER_SEED), outcome-split Trends
  (saga_completed/compensated_duration) + population counters; legacy
  metrics preserved
- harness: tools/bench/lib/fnv1a64.py single source of truth for expected
  declines; baseline hard-asserts observed==expected (correctness-gate.json,
  skip+WARN on legacy summaries); outcome-split latency, ops/s/core,
  fault=terminal label
- schemas/benchmark-env: + cloud-vm-do-cpu-optimized, cloud-vm-do-shared
  profiles; docs/hardware-profiles.md: shared-droplet section
- CONTRACT-v2.md: pinned stableHash64 algorithm note;
  CONTRACT-v2-IMPLEMENTATION.md: honest status ledger (oracle service,
  HdrHistogram artifacts, Restate stack deferred)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>